[gd_scene load_steps=6 format=3 uid="uid://t052oro0itet"]

[ext_resource type="Script" uid="uid://bql7ll85j2oy8" path="res://scenes/wand/wand_pickup.gd" id="1_s7waw"]
[ext_resource type="Texture2D" uid="uid://c5fsvledlxp2b" path="res://assets/foxy/fox_hat_wand/wand.png" id="2_6htyo"]

[sub_resource type="Gradient" id="Gradient_6htyo"]
offsets = PackedFloat32Array(0, 0.348684, 0.835526, 1)
colors = PackedColorArray(1, 0.969, 0.8, 0, 1, 0.969, 0.8, 0.337, 1, 0.968627, 0.8, 1, 1, 0.843, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cyorf"]
gradient = SubResource("Gradient_6htyo")
width = 192
height = 192
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_kds0u"]
radius = 113.864

[node name="WandPickup" type="Node2D"]
script = ExtResource("1_s7waw")

[node name="Visuals" type="Node2D" parent="."]

[node name="WandSprite" type="Sprite2D" parent="Visuals"]
position = Vector2(-0.499998, 0.5)
scale = Vector2(0.765625, 0.765625)
texture = ExtResource("2_6htyo")

[node name="HaloSprite" type="Sprite2D" parent="Visuals"]
position = Vector2(-1.19209e-07, -3.38813e-21)
scale = Vector2(0.875, 0.875)
texture = SubResource("GradientTexture2D_cyorf")

[node name="DetectionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
shape = SubResource("CircleShape2D_kds0u")

[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_player_detected"]
